WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262228
[JSC] Shouldn't use the fast path of copying indexed properties if saw indexed GetterSetter properties
https://bugs.webkit.org/show_bug.cgi?id=262228
Summary
[JSC] Shouldn't use the fast path of copying indexed properties if saw indexe...
Yijia Huang
Reported
2023-09-27 16:15:18 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2023-09-27 16:15:40 PDT
<
rdar://115790723
>
Yijia Huang
Comment 2
2023-09-27 16:34:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18315
EWS
Comment 3
2023-09-28 00:22:36 PDT
Committed
268567@main
(ecb799021d89): <
https://commits.webkit.org/268567@main
> Reviewed commits have been landed. Closing PR #18315 and removing active labels.
Mark Lam
Comment 4
2023-10-03 11:07:43 PDT
***
Bug 262546
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug