Cherry-pick ecb799021d89. rdar://115790723

[JSC] Shouldn't use the fast path of copying indexed properties if saw indexed GetterSetter properties
    https://bugs.webkit.org/show_bug.cgi?id=262228
    rdar://115790723

    Reviewed by Yusuke Suzuki.

    Previously, we introduced a fast path for `Object.assign` by copying
    indexed properties directly (https://commits.webkit.org/267797@main).
    This is wrong since indexed properties may contain getter or setter
    properties which have side effects. So, we should avoid to use the
    fast path of copying indexed properties when saw any indexed getter
    or setter property.

    * Source/JavaScriptCore/runtime/JSObject.cpp:
    (JSC::putIndexedDescriptor):
    * Source/JavaScriptCore/runtime/JSObject.h:
    (JSC::JSObject::canHaveExistingOwnIndexedGetterSetterProperties):
    * Source/JavaScriptCore/runtime/JSObjectInlines.h:
    (JSC::JSObject::forEachOwnIndexedProperty):
    (JSC::JSObject::forEachIndexedProperty): Deleted.
    * Source/JavaScriptCore/runtime/ObjectConstructor.cpp:
    (JSC::JSC_DEFINE_HOST_FUNCTION):
    * Source/JavaScriptCore/runtime/ObjectConstructorInlines.h:
    (JSC::objectAssignIndexedPropertiesFast):
    (JSC::objectAssignFast):
    * Source/JavaScriptCore/runtime/SparseArrayValueMap.cpp:
    (JSC::SparseArrayEntry::get const):
    * Source/JavaScriptCore/runtime/SparseArrayValueMap.h:
    (JSC::SparseArrayEntry::SparseArrayEntry):
    (JSC::SparseArrayEntry::attributes const):
    (JSC::SparseArrayEntry::forceSet):
    (JSC::SparseArrayEntry::asValue):

    Canonical link: https://commits.webkit.org/268567@main

Identifier: 267815.214@safari-7617-branch